--- a/Smart-MOM-Code/Frontend/public/index.html
+++ b/Smart-MOM-Code/Frontend/public/index.html
@@ -36,6 +36,7 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jvectormap/2.0.4/jquery-jvectormap.css" type="text/css" media="screen"/>
 
     <script src="/Frontend/src/components/Welcome/lib/jquery/jquery.min.js"></script>
     
