--- a/Smart-MOM-Code/Frontend/public/index.html
+++ b/Smart-MOM-Code/Frontend/public/index.html
@@ -56,7 +56,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Grubhub Simulator</title>
+    <title>Smart MOM</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
